lab3. Automatic_generator_analyzers/gen/FunctionalParser.java
// Generated from D:/MT/lab3. Automatic_generator_analyzers/src/antlr4\Functional.g4 by ANTLR 4.9.2

import Functional2Imperative.*;
import Functional2Imperative.Type.*;
import Functional2Imperative.Definition.*;
import Functional2Imperative.Definition.Expr.*;
import Functional2Imperative.Definition.Pattern.*;
import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FunctionalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOUBLE_COLONS=1, EQUALS=2, INT=3, LIST=4, UNDERSCORES=5, IDENTIFIER=6, 
		FUNCTIONAL_ARROW=7, GUARD=8, OPEN_PARENTHESIS=9, CLOSE_PARENTHESIS=10, 
		BIN_OPERATOR=11, UNARY_OPERATOR=12, NEWLINES=13, SPACES=14;
	public static final int
		RULE_program = 0, RULE_lines = 1, RULE_functions = 2, RULE_functionType = 3, 
		RULE_type = 4, RULE_typeTail = 5, RULE_typeHead = 6, RULE_functionDef = 7, 
		RULE_funName = 8, RULE_patterns = 9, RULE_definitions = 10, RULE_expr = 11, 
		RULE_prime = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "lines", "functions", "functionType", "type", "typeTail", 
			"typeHead", "functionDef", "funName", "patterns", "definitions", "expr", 
			"prime"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'::'", "'='", null, "'list'", "'_'", null, "'->'", "'|'", "'('", 
			"')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOUBLE_COLONS", "EQUALS", "INT", "LIST", "UNDERSCORES", "IDENTIFIER", 
			"FUNCTIONAL_ARROW", "GUARD", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", 
			"BIN_OPERATOR", "UNARY_OPERATOR", "NEWLINES", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Functional.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program p;
		public LinesContext lines;
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			((ProgramContext)_localctx).lines = lines();
			((ProgramContext)_localctx).p =  new Program(((ProgramContext)_localctx).lines.li);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinesContext extends ParserRuleContext {
		public List<Function> li;
		public FunctionTypeContext functionType;
		public FunctionsContext functions;
		public FunctionTypeContext functionType() {
			return getRuleContext(FunctionTypeContext.class,0);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public LinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterLines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitLines(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitLines(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinesContext lines() throws RecognitionException {
		LinesContext _localctx = new LinesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lines);
		try {
			setState(34);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				((LinesContext)_localctx).functionType = functionType();
				setState(30);
				((LinesContext)_localctx).functions = functions(((LinesContext)_localctx).functionType.fn, ((LinesContext)_localctx).functionType.types);
				((LinesContext)_localctx).li =  ((LinesContext)_localctx).functions.li;
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				((LinesContext)_localctx).li =  new ArrayList<>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public String fn;
		public List<Type> types;
		public List<Function> li;
		public FunctionDefContext functionDef;
		public LinesContext lines;
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public List<FunctionDefContext> functionDef() {
			return getRuleContexts(FunctionDefContext.class);
		}
		public FunctionDefContext functionDef(int i) {
			return getRuleContext(FunctionDefContext.class,i);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public FunctionsContext(ParserRuleContext parent, int invokingState, String fn, List<Type> types) {
			super(parent, invokingState);
			this.fn = fn;
			this.types = types;
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterFunctions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitFunctions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions(String fn,List<Type> types) throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState(), fn, types);
		enterRule(_localctx, 4, RULE_functions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			List<FunctionDef> fds = new ArrayList<>();
			setState(40); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(37);
					((FunctionsContext)_localctx).functionDef = functionDef();
					fds.add(((FunctionsContext)_localctx).functionDef.fd);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(42); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(44);
			((FunctionsContext)_localctx).lines = lines();

			                                                            Function func = new Function(_localctx.fn, _localctx.types, fds);
			                                                            ((FunctionsContext)_localctx).lines.li.add(func);
			                                                            ((FunctionsContext)_localctx).li =  ((FunctionsContext)_localctx).lines.li;
			                                                        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionTypeContext extends ParserRuleContext {
		public String fn;
		public List<Type> types;
		public FunNameContext funName;
		public TypeContext type;
		public FunNameContext funName() {
			return getRuleContext(FunNameContext.class,0);
		}
		public TerminalNode DOUBLE_COLONS() { return getToken(FunctionalParser.DOUBLE_COLONS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NEWLINES() { return getToken(FunctionalParser.NEWLINES, 0); }
		public FunctionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterFunctionType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitFunctionType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitFunctionType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionTypeContext functionType() throws RecognitionException {
		FunctionTypeContext _localctx = new FunctionTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			((FunctionTypeContext)_localctx).funName = funName();
			setState(48);
			match(DOUBLE_COLONS);
			setState(49);
			((FunctionTypeContext)_localctx).type = type(new ArrayList<>());
			setState(50);
			match(NEWLINES);

			                       ((FunctionTypeContext)_localctx).fn =  (((FunctionTypeContext)_localctx).funName!=null?_input.getText(((FunctionTypeContext)_localctx).funName.start,((FunctionTypeContext)_localctx).funName.stop):null);
			                       ((FunctionTypeContext)_localctx).types =  ((FunctionTypeContext)_localctx).type.outpr;
			                    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public List<Type> inpr;
		public List<Type> outpr;
		public TypeHeadContext typeHead;
		public TypeTailContext typeTail;
		public TypeHeadContext typeHead() {
			return getRuleContext(TypeHeadContext.class,0);
		}
		public TypeTailContext typeTail() {
			return getRuleContext(TypeTailContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TypeContext(ParserRuleContext parent, int invokingState, List<Type> inpr) {
			super(parent, invokingState);
			this.inpr = inpr;
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type(List<Type> inpr) throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState(), inpr);
		enterRule(_localctx, 8, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			((TypeContext)_localctx).typeHead = typeHead();
			_localctx.inpr.add(((TypeContext)_localctx).typeHead.t);
			setState(55);
			((TypeContext)_localctx).typeTail = typeTail(_localctx.inpr);
			((TypeContext)_localctx).outpr =  ((TypeContext)_localctx).typeTail.outpr;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeTailContext extends ParserRuleContext {
		public List<Type> inpr;
		public List<Type> outpr;
		public TypeContext type;
		public TerminalNode FUNCTIONAL_ARROW() { return getToken(FunctionalParser.FUNCTIONAL_ARROW, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeTailContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TypeTailContext(ParserRuleContext parent, int invokingState, List<Type> inpr) {
			super(parent, invokingState);
			this.inpr = inpr;
		}
		@Override public int getRuleIndex() { return RULE_typeTail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterTypeTail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitTypeTail(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitTypeTail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeTailContext typeTail(List<Type> inpr) throws RecognitionException {
		TypeTailContext _localctx = new TypeTailContext(_ctx, getState(), inpr);
		enterRule(_localctx, 10, RULE_typeTail);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTIONAL_ARROW:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(FUNCTIONAL_ARROW);
				setState(59);
				((TypeTailContext)_localctx).type = type(_localctx.inpr);
				((TypeTailContext)_localctx).outpr =  ((TypeTailContext)_localctx).type.outpr;
				}
				break;
			case CLOSE_PARENTHESIS:
			case NEWLINES:
				enterOuterAlt(_localctx, 2);
				{
				((TypeTailContext)_localctx).outpr =  _localctx.inpr;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeHeadContext extends ParserRuleContext {
		public Type t;
		public Token IDENTIFIER;
		public TypeContext type;
		public TerminalNode IDENTIFIER() { return getToken(FunctionalParser.IDENTIFIER, 0); }
		public TerminalNode OPEN_PARENTHESIS() { return getToken(FunctionalParser.OPEN_PARENTHESIS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode CLOSE_PARENTHESIS() { return getToken(FunctionalParser.CLOSE_PARENTHESIS, 0); }
		public TypeHeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeHead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterTypeHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitTypeHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitTypeHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeHeadContext typeHead() throws RecognitionException {
		TypeHeadContext _localctx = new TypeHeadContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeHead);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				((TypeHeadContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				((TypeHeadContext)_localctx).t =  new PrimeType((((TypeHeadContext)_localctx).IDENTIFIER!=null?((TypeHeadContext)_localctx).IDENTIFIER.getText():null));
				}
				break;
			case OPEN_PARENTHESIS:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				match(OPEN_PARENTHESIS);
				setState(68);
				((TypeHeadContext)_localctx).type = type(new ArrayList<>());
				setState(69);
				match(CLOSE_PARENTHESIS);

				                        ((TypeHeadContext)_localctx).t =  new FunctionalType(((TypeHeadContext)_localctx).type.outpr);
				                     
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefContext extends ParserRuleContext {
		public FunctionDef fd;
		public FunNameContext funName;
		public PatternsContext patterns;
		public DefinitionsContext definitions;
		public FunNameContext funName() {
			return getRuleContext(FunNameContext.class,0);
		}
		public PatternsContext patterns() {
			return getRuleContext(PatternsContext.class,0);
		}
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitFunctionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitFunctionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			((FunctionDefContext)_localctx).funName = funName();
			setState(75);
			((FunctionDefContext)_localctx).patterns = patterns();
			setState(76);
			((FunctionDefContext)_localctx).definitions = definitions();

			               ((FunctionDefContext)_localctx).fd =  new FunctionDef((((FunctionDefContext)_localctx).funName!=null?_input.getText(((FunctionDefContext)_localctx).funName.start,((FunctionDefContext)_localctx).funName.stop):null), ((FunctionDefContext)_localctx).patterns.pt, ((FunctionDefContext)_localctx).definitions.defs);
			           
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FunctionalParser.IDENTIFIER, 0); }
		public FunNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterFunName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitFunName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitFunName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunNameContext funName() throws RecognitionException {
		FunNameContext _localctx = new FunNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatternsContext extends ParserRuleContext {
		public Patterns pt;
		public Token IDENTIFIER;
		public Token INT;
		public List<TerminalNode> IDENTIFIER() { return getTokens(FunctionalParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FunctionalParser.IDENTIFIER, i);
		}
		public List<TerminalNode> INT() { return getTokens(FunctionalParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(FunctionalParser.INT, i);
		}
		public List<TerminalNode> UNDERSCORES() { return getTokens(FunctionalParser.UNDERSCORES); }
		public TerminalNode UNDERSCORES(int i) {
			return getToken(FunctionalParser.UNDERSCORES, i);
		}
		public PatternsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_patterns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterPatterns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitPatterns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitPatterns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatternsContext patterns() throws RecognitionException {
		PatternsContext _localctx = new PatternsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_patterns);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			            List<Pattern> patterns = new ArrayList<>();
			        
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << UNDERSCORES) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(88);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(82);
					((PatternsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					patterns.add(new VarPattern((((PatternsContext)_localctx).IDENTIFIER!=null?((PatternsContext)_localctx).IDENTIFIER.getText():null)));
					}
					break;
				case INT:
					{
					setState(84);
					((PatternsContext)_localctx).INT = match(INT);
					patterns.add(new IntPattern((((PatternsContext)_localctx).INT!=null?((PatternsContext)_localctx).INT.getText():null)));
					}
					break;
				case UNDERSCORES:
					{
					setState(86);
					match(UNDERSCORES);
					patterns.add(new UnderscoresPattern((((PatternsContext)_localctx).INT!=null?((PatternsContext)_localctx).INT.getText():null)));
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((PatternsContext)_localctx).pt =  new Patterns(patterns);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> defs;
		public ExprContext expr;
		public ExprContext g;
		public ExprContext e;
		public List<TerminalNode> EQUALS() { return getTokens(FunctionalParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(FunctionalParser.EQUALS, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> NEWLINES() { return getTokens(FunctionalParser.NEWLINES); }
		public TerminalNode NEWLINES(int i) {
			return getToken(FunctionalParser.NEWLINES, i);
		}
		public List<TerminalNode> GUARD() { return getTokens(FunctionalParser.GUARD); }
		public TerminalNode GUARD(int i) {
			return getToken(FunctionalParser.GUARD, i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).enterDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalListener ) ((FunctionalListener)listener).exitDefinitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalVisitor ) return ((FunctionalVisitor<? extends T>)visitor).visitDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}
